# agent-context-workshop

./: .env.example  .gitignore  AGENTS.md  ATTRIBUTION.md  README.md  SETUP.md  docker-compose.yml  pyproject.toml
data/eval/: gold.json  graph_vs_grep_cache.json  nudge_experiment.json
docs/: pre-workshop-email.md
examples/: blast_radius_demo.py
notebooks/: 00_start_here.ipynb  01_posting_list_context.ipynb  02_does_the_graph_beat_grep.ipynb  03_python_griffe_resolution.ipynb  04_rung2_fenic_coda.ipynb
scripts/: regenerate_data.sh  setup_data.sh
src/context_workshop/: __init__.py
src/context_workshop/eval/: __init__.py  corpus.py  harness.py  nudges.py  scorer.py
src/context_workshop/graph/: __init__.py  agent.py  loader.py  rust.py  schema.py  tools.py
src/context_workshop/parsers/: __init__.py  python_griffe.py  rust_rustdoc.py  rust_treesitter.py  schema.py  tree.py
talk/: slides.md
talk/agent-context-workshop/: package.json  slides.md  style.css
talk/agent-context-workshop/components/: BarCompare.vue  QrCode.vue  QrLinkedIn.vue  TypedefLogo.vue
tests/: test_fenic_ingestion.py  test_public_api.py  test_python_griffe.py  test_rust_rustdoc.py  test_rust_treesitter.py  test_schema.py  test_tree.py
tests/eval/: test_scorer.py
tests/fixtures/: rustdoc_edges.json  rustdoc_min.json
tests/fixtures/pypkg/: __init__.py  mod.py
tests/graph/: test_agent.py  test_edge_schema.py  test_loader_cypher.py  test_loader_integration.py  test_rust_edges_tier_a.py  test_rust_edges_tier_b.py  test_rust_nodes.py  test_tools_cypher.py  test_tools_integration.py
