[project]
name = "agent-context-workshop"
version = "0.1.0"
description = "A context layer for coding agents: a code knowledge graph over qdrant, plus a graph-vs-grep eval."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  # One model key: OPENROUTER_API_KEY. Both layers route through OpenRouter (any model).
  "fenic[openai]>=0.10.0",            # Rung-2 coda; OpenRouterLanguageModel rides the OpenAI-compatible client
  "pyarrow>=17",
  "griffe>=0.42.0",
  "tree-sitter>=0.25",
  "tree-sitter-rust>=0.24",
  "ipykernel>=6.29.0",
  "jupyterlab>=4.2.0",
  "pydantic>=2.8.0",
  "python-dotenv>=1.0",               # load .env (one place, not four hand-rolled loops)
  "pydantic-ai-slim[openai]>=2.0.0",  # slim core + OpenAI/OpenRouter provider only (no bundled provider tree)
  "pydantic-ai-backend[console]>=0.2.14",
  "pydantic-evals>=2.0.0",
  "neo4j>=5.0",
]

[project.optional-dependencies]
# Opt-in eval tracing. NOT installed by default — `uv sync` stays slim and offline.
# `uv sync --extra trace` + a LOGFIRE_TOKEN streams every model request and tool call to the
# Logfire UI, where a single trace *shows* the adoption story: the agent reaching for the graph
# vs falling back to grep. pydantic-ai + pydantic-evals both auto-instrument once logfire is on.
trace = ["logfire>=3.0"]

[dependency-groups]
dev = [
  "ruff>=0.9.0",
  "pytest>=8.0.0",
]

[tool.ruff]
line-length = 100
src = ["src"]
# Hand-curated teaching notebooks: the Colab bootstrap's import order is load-bearing and cells are
# intentionally compact. They're verified by running them (nbconvert), not by lint — keep ruff off them.
extend-exclude = ["notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# Line length (E501) is the formatter's job, not the linter's — matches the house ruff config.
ignore = ["E501"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
filterwarnings = [
  # Third-party SWIG C-binding noise emitted at fenic import; not our code.
  "ignore:builtin type .* has no __module__ attribute:DeprecationWarning",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/context_workshop"]
